# seqcol_rs

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  utils.rs
test/: seqcol_obj.json
test_data/: seqcol_obj.json  simple.fa  simple2.fa
