[package]
name = "seqcol_rs"
version = "0.1.3"
edition = "2021"
authors = ["Rob Patro <rob@cs.umd.edu>"]
description = "library to implement seqcol in rust"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/seqcol_rs"
homepage = "https://github.com/COMBINE-lab/seqcol_rs"
documentation = "https://docs.rs/seqcol_rs"
include = ["src/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]
keywords = ["genomics", "provenance", "seqcol"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
noodles-sam = "0.66.0"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
itertools = "0.13.0"
needletail = "0.6.0"
serde_json = { version = "1.0.132", features = ["preserve_order", "indexmap"] }
sha2 = { version = "0.10.8", features = ["asm", "asm-aarch64"] }
