[package]
name = "seqcol_rs"
version = "0.4.0"
edition = "2024"
authors = ["Rob Patro <rob@cs.umd.edu>"]
description = "library to implement seqcol in rust"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/COMBINE-lab/seqcol_rs"
homepage = "https://github.com/COMBINE-lab/seqcol_rs"
documentation = "https://docs.rs/seqcol_rs"
include = ["src/*.rs", "/Cargo.toml", "/README.md", "/LICENSE"]
keywords = ["genomics", "provenance", "seqcol"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
noodles-sam = "0.73.0"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
itertools = "0.14.0"
needletail = "0.6.3"
serde_json = { version = "1.0.140", features = ["preserve_order", "indexmap"] }
sha2 = { version = "0.10.8", features = ["asm", "asm-aarch64"] }
hex = "0.4.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
